plugins {
	id 'java'
    id 'groovy'
    id 'java-library'
	id 'idea'
	id 'eclipse'
	id 'maven-publish'
	id 'com.diffplug.spotless' version '6.19.0'
	id 'net.fabricmc.fabric-loom' version '1.15-SNAPSHOT'
    id 'me.modmuss50.mod-publish-plugin' version '0.7.4'
}

def ENV = System.getenv()

group = 'TechReborn'

allprojects {
    version = project.mod_version + (ENV.GITHUB_ACTIONS ? "" : "+local")

    apply plugin: "net.fabricmc.fabric-loom"
    apply plugin: "maven-publish"
	apply plugin: "com.diffplug.spotless"

    loom {
        runtimeOnlyLog4j = true
        splitEnvironmentSourceSets()
    }

    // Shared deps between TR and RC
    dependencies {
        minecraft "com.mojang:minecraft:${project.minecraft_version}"
        implementation "net.fabricmc:fabric-loader:${project.loader_version}"

        //Fabric api
        implementation "net.fabricmc.fabric-api:fabric-api:${project.fapi_version}"

        include(api("teamreborn:energy:${project.energy_version}")) {
            transitive = false
        }
    }

    processResources {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
        inputs.property "version", project.version

        filesMatching("fabric.mod.json") {
            expand "version": project.version
        }
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = "UTF-8"
        it.options.release = 25
    }

    java {
        withSourcesJar()
		sourceCompatibility = JavaVersion.VERSION_25
		targetCompatibility = JavaVersion.VERSION_25
    }

    publishing {
        publications {
            register("maven", MavenPublication) {
                groupId = project.name
                artifactId = project.base.archivesName.get() + "-" + (ENV.GITHUB_REF_NAME ?: "local")
                version = project.version

                from components.java
            }
        }
        repositories {
            if (ENV.MAVEN_URL) {
                maven {
                    url ENV.MAVEN_URL
                    credentials {
                        username ENV.MAVEN_USERNAME
                        password ENV.MAVEN_PASSWORD
                    }
                }
            }
        }
    }

    apply from: rootProject.file('gradle/package-info.gradle')

	 spotless {
	 	java {
	 		licenseHeaderFile(file("HEADER"))
	 		removeUnusedImports()
	 		indentWithTabs()
	 		trimTrailingWhitespace()
	 		endWithNewline()
	 	}
	 }
}

spotless {
    groovy {
        licenseHeaderFile(file("HEADER"))
        indentWithTabs()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

processResources {
    doLast {
        // Depend on the reborn core version it was built against
        fileTree(dir: outputs.files.asPath, include: "fabric.mod.json").each {
            def jsonSlurper = new JsonSlurper()
            def modJson = jsonSlurper.parseText(it.text)

            modJson.depends.reborncore = "~${project.version}"

            it.text = JsonOutput.toJson(modJson)
        }
    }
}

tasks.sourcesJar {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

loom {
    accessWidenerPath = file("src/main/resources/techreborn.accesswidener")
}

fabricApi {
    configureDataGeneration {
        client = true
        createSourceSet = true
        modId = "techreborn-datagen"
    }
}

sourceSets {
    datagen {
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}

allprojects {
    loom {
        mods {
            reborncore {
                sourceSet project(":RebornCore").sourceSets.main
                sourceSet project(":RebornCore").sourceSets.client
            }
            techreborn {
                sourceSet project(":").sourceSets.main
                sourceSet project(":").sourceSets.client
            }
        }
    }
}

repositories {
    exclusiveContent {
        forRepository {
            maven {
                name = "ModMaven"
                url = "https://modmaven.dev"
            }
        }
        filter {
            includeGroup "mezz.jei"
        }
    }
}

// TechReborn specific dependencies
dependencies {
    api project(":RebornCore")
    clientImplementation project(":RebornCore").sourceSets.client.output

    include project(":RebornCore")

    compileOnly("mezz.jei:jei-26.1.1-fabric-api:29.3.0.22")
    runtimeOnly("mezz.jei:jei-26.1.1-fabric:29.3.0.22")

    // Use groovy for datagen, if you are copying this you prob dont want it.
    datagenImplementation 'org.apache.groovy:groovy:5.0.3'
}

jar {
	exclude "**/*.psd"
}

import groovy.json.JsonSlurper
import groovy.json.JsonOutput

publishMods {
	changelog = providers.environmentVariable("CHANGELOG").orElse("No changelog provided")
    version = project.version
	type = providers.environmentVariable("RELEASE_CHANNEL").orElse("release").map {it == "release" ? STABLE : BETA }
    modLoaders.add("fabric")
	dryRun = providers.environmentVariable("CURSEFORGE_API_KEY").getOrNull() == null

    def options = curseforgeOptions {
        accessToken = providers.environmentVariable("CURSEFORGE_API_KEY")
        minecraftVersions.add("26.1.2")
        minecraftVersions.add("26.1.1")
        minecraftVersions.add("26.1")

        requires {
            slug = "fabric-api"
        }
    }

    def mrOptions = modrinthOptions {
        accessToken = providers.environmentVariable("MODRINTH_API_KEY")
        minecraftVersions.add("26.1.2")
        minecraftVersions.add("26.1.1")
        minecraftVersions.add("26.1")

        requires {
            slug = "fabric-api"
        }
    }

    curseforge("curseforgeTechReborn") {
        from options
        projectId = "233564"
        file = jar.archiveFile

        embeds {
            slug = "reborncore"
        }
    }

    curseforge("curseforgeRebornCore") {
        from options
        projectId = "237903"
        file = project(":RebornCore").tasks.jar.archiveFile
		displayName = "RebornCore ${project.version}"
    }

    modrinth("modrinthTechReborn") {
        from mrOptions
        projectId = "3eMENr4V"
        file = jar.archiveFile

        embeds {
            slug = "reborncore"
        }
    }

    modrinth("modrinthRebornCore") {
        from mrOptions
        projectId = "3NCrJdj3"
        file = project(":RebornCore").tasks.jar.archiveFile
    }

	github {
		file = jar.archiveFile
		additionalFiles.from project(":RebornCore").tasks.jar.archiveFile
		repository = providers.environmentVariable("GITHUB_REPOSITORY").orElse("dryrun")
		accessToken = providers.environmentVariable("GITHUB_TOKEN")
		commitish = providers.environmentVariable("GITHUB_REF_NAME").orElse("dryrun")
	}
}
